Bug 361108 - Konversation incorrectly caching channel topic
Summary: Konversation incorrectly caching channel topic
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-28 17:32 UTC by Greg Mason
Modified: 2016-10-02 09:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Greg Mason 2016-03-28 17:32:57 UTC
Konversation incorrectly loads an old version of the channel topic when trying to update the channel's topic. For example, if I set the topic to "zomg asdf abc123" and somebody else changes it to "zomg 1234 abc123", Konversation will show their new topic, but when I try to edit the topic again, it will populate the field with the last topic I set, rather than the current topic of the channel.

This is disruptive to say the least, as it can sometimes lead to important information being dropped from a channel's topic that has been added since I last changed the topic.

Reproducible: Sometimes

Steps to Reproduce:
1. Set the topic in a channel.
2. Have somebody else change that topic.
3. Try to update the topic that person set.

Actual Results:  
Dialog window shows the last topic I set

Expected Results:  
dialog window should show the current topic of the channel.

It also appears that Konversation will sometimes erroneously set the topic of a channel upon startup when reconnecting to my bouncer. It's possible that Konversation cannot cope with having a ton of channels thrown at it all at once. I think this is probably related, since it seems that Konversation has an issue with loading and caching the correct topic.
Comment 1 Peter Simonsson 2016-10-02 09:51:55 UTC
Git commit 24d3032a2e15d07ce13ad484e158fcd5b32effa1 by Peter Simonsson.
Committed on 02/10/2016 at 09:51.
Pushed by psn into branch 'master'.

Fix topic editor to get updated when topic changes

If the topic had been edited locally and after that remotely the topic
editor didn't update correctly due to the edit detection not getting
reset between uses

M  +14   -3    src/viewer/channeloptionsdialog.cpp
M  +0    -17   src/viewer/topichistoryview.cpp
M  +0    -2    src/viewer/topichistoryview.h

http://commits.kde.org/konversation/24d3032a2e15d07ce13ad484e158fcd5b32effa1