Fix topic editor to get updated when topic changes

If the topic had been edited locally and after that remotely the topic
editor didn't update correctly due to the edit detection not getting
reset between uses

BUG:361108